[gd_scene load_steps=45 format=3 uid="uid://dgrcx8d5bgjwa"]

[ext_resource type="FontFile" uid="uid://dohkbu7ekkfx8" path="res://Textures/Fonts/pixeltype/Pixeltype.ttf" id="1_lffyk"]
[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_yxqu0"]
[ext_resource type="StyleBox" uid="uid://dvu7f5h7snggp" path="res://Scenes and Scripts/UI/Menus/panelContainer.tres" id="2_uf2ed"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/ColourPicker/palette_item.gd" id="3_ql0ii"]
[ext_resource type="PackedScene" uid="uid://c062i5iscj5rd" path="res://Scenes and Scripts/UI/ColourPicker/colour_button.tscn" id="4_4rv63"]
[ext_resource type="Script" path="res://Scenes and Scripts/Classes/line_edit.gd" id="4_8qcwb"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="4_t8g26"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="5_sfuxr"]
[ext_resource type="PackedScene" uid="uid://c338whou4al23" path="res://Scenes and Scripts/UI/Tooltip.tscn" id="6_okb6t"]
[ext_resource type="Texture2D" uid="uid://bo1u07jlygktr" path="res://Textures/Buttons/square_hover.png" id="6_xg5jc"]
[ext_resource type="Texture2D" uid="uid://d16opu3dyhri7" path="res://Textures/Buttons/eye/eye_open.png" id="7_6x2jo"]
[ext_resource type="Texture2D" uid="uid://s14bo7fcdam0" path="res://Textures/Buttons/square_normal.png" id="7_ycpnf"]
[ext_resource type="ButtonGroup" uid="uid://dqe1qlfngy1ia" path="res://Resources/ButtonGroups/palette.tres" id="8_tn7tp"]
[ext_resource type="Texture2D" uid="uid://dwh7e30xi8v07" path="res://Textures/Buttons/Tabs/arrow_down.png" id="9_qiab5"]
[ext_resource type="Texture2D" uid="uid://cea5mj3u65016" path="res://Textures/Buttons/square_pressed_active.png" id="10_r3kfk"]
[ext_resource type="Texture2D" uid="uid://bt1qr2mxq14l8" path="res://Textures/Buttons/icons/restart.png" id="12_kpgqi"]
[ext_resource type="Texture2D" uid="uid://uuymrv72pyyc" path="res://Textures/Buttons/icons/shuffle.png" id="13_u5xtd"]
[ext_resource type="Theme" uid="uid://cfmbhoq8cuoge" path="res://Resources/Themes/ProjectTheme.tres" id="15_lgahd"]
[ext_resource type="Texture2D" uid="uid://cms1u4elh5bo3" path="res://Textures/Buttons/icons/delete.png" id="16_4850j"]
[ext_resource type="PackedScene" uid="uid://7kmcsryae7lw" path="res://Scenes and Scripts/UI/Buttons/load_button.tscn" id="16_lpql2"]
[ext_resource type="Theme" uid="uid://c7hk3afo5tria" path="res://Resources/Themes/toggle_button.tres" id="18_xjmef"]

[sub_resource type="FontVariation" id="FontVariation_fl507"]
base_font = ExtResource("1_lffyk")
spacing_bottom = -2

[sub_resource type="FontVariation" id="FontVariation_5o2co"]
base_font = ExtResource("1_lffyk")
spacing_bottom = -2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vtmen"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0snhi"]

[sub_resource type="Theme" id="Theme_tgtwt"]
Label/font_sizes/font_size = 13
Label/fonts/font = SubResource("FontVariation_fl507")
LineEdit/font_sizes/font_size = 12
LineEdit/fonts/font = SubResource("FontVariation_5o2co")
LineEdit/styles/focus = SubResource("StyleBoxEmpty_vtmen")
LineEdit/styles/normal = ExtResource("2_uf2ed")
LineEdit/styles/read_only = SubResource("StyleBoxEmpty_0snhi")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qxe7s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kubuy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n0u2h"]
content_margin_left = 5.0
content_margin_top = 4.0
content_margin_right = 5.0
content_margin_bottom = 8.0
texture = ExtResource("6_xg5jc")
texture_margin_left = 5.0
texture_margin_top = 6.0
texture_margin_right = 5.0
texture_margin_bottom = 7.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kxnlx"]
content_margin_left = 5.0
content_margin_top = 4.0
content_margin_right = 5.0
content_margin_bottom = 8.0
texture = ExtResource("7_ycpnf")
texture_margin_left = 5.0
texture_margin_top = 6.0
texture_margin_right = 5.0
texture_margin_bottom = 7.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pbk00"]
content_margin_left = 5.0
content_margin_top = 6.0
content_margin_right = 5.0
content_margin_bottom = 6.0
texture = ExtResource("10_r3kfk")
texture_margin_left = 5.0
texture_margin_top = 6.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="Theme" id="Theme_n2y8j"]
Button/styles/focus = SubResource("StyleBoxEmpty_kubuy")
Button/styles/hover = SubResource("StyleBoxTexture_n0u2h")
Button/styles/normal = SubResource("StyleBoxTexture_kxnlx")
Button/styles/pressed = SubResource("StyleBoxTexture_pbk00")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uf2fe"]
resource_local_to_scene = true
shader = ExtResource("5_sfuxr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i72an"]
resource_local_to_scene = true
shader = ExtResource("5_sfuxr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1p38k"]
resource_local_to_scene = true
shader = ExtResource("5_sfuxr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v5nci"]
resource_local_to_scene = true
shader = ExtResource("5_sfuxr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kjmis"]
resource_local_to_scene = true
shader = ExtResource("5_sfuxr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nu25j"]
resource_local_to_scene = true
shader = ExtResource("5_sfuxr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uo624"]
resource_local_to_scene = true
shader = ExtResource("5_sfuxr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mgvhw"]
resource_local_to_scene = true
shader = ExtResource("5_sfuxr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b7217"]
resource_local_to_scene = true
shader = ExtResource("5_sfuxr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xjsm0"]
resource_local_to_scene = true
shader = ExtResource("5_sfuxr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_31qwt"]
resource_local_to_scene = true
shader = ExtResource("5_sfuxr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tyhon"]
resource_local_to_scene = true
shader = ExtResource("5_sfuxr")

[node name="PaletteItem" type="PanelContainer"]
material = ExtResource("1_yxqu0")
use_parent_material = true
offset_right = 221.0
offset_bottom = 32.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_tgtwt")
theme_override_styles/panel = SubResource("StyleBoxEmpty_qxe7s")
script = ExtResource("3_ql0ii")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
use_parent_material = true
layout_mode = 2

[node name="Index" type="Label" parent="HBoxContainer"]
visible = false
use_parent_material = true
custom_minimum_size = Vector2(24, 30)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 21
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(201, 2.08165e-12)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 2

[node name="Title" type="LineEdit" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(60, 2.08165e-12)
layout_mode = 2
placeholder_text = "[Enter Title]"
alignment = 1
max_length = 12
editable = false
script = ExtResource("4_8qcwb")

[node name="Use" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_t8g26")]
material = null
layout_mode = 2
mouse_filter = 1
theme = SubResource("Theme_n2y8j")
icon = ExtResource("7_6x2jo")
minimum_size = Vector2(20, 20)
toggle_mode = true
expand_icon = true
button_group = ExtResource("8_tn7tp")

[node name="Tooltip" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Use" instance=ExtResource("6_okb6t")]
tooltip = "Use"

[node name="Colours" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = -1

[node name="Primary" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Colours" instance=ExtResource("4_4rv63")]
material = SubResource("ShaderMaterial_uf2fe")
layout_mode = 2
icon_colour = Color(0.901961, 0.803922, 0.611765, 1)
minimum_size = Vector2(20, 20)
disabled = true

[node name="Tooltip" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Colours/Primary" instance=ExtResource("6_okb6t")]
tooltip = "Background"

[node name="Grid" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Colours" instance=ExtResource("4_4rv63")]
material = SubResource("ShaderMaterial_i72an")
layout_mode = 2
icon_colour = Color(0.858824, 0.768627, 0.584314, 1)
minimum_size = Vector2(20, 20)
disabled = true

[node name="Tooltip" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Colours/Grid" instance=ExtResource("6_okb6t")]
tooltip = "Grid"

[node name="Secondary" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Colours" instance=ExtResource("4_4rv63")]
material = SubResource("ShaderMaterial_1p38k")
layout_mode = 2
icon_colour = Color(0.219608, 0.223529, 0.188235, 1)
minimum_size = Vector2(20, 20)
disabled = true

[node name="Tooltip" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Colours/Secondary" instance=ExtResource("6_okb6t")]
tooltip = "Ink"

[node name="Buttons" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = -1

[node name="Delete" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Buttons" instance=ExtResource("4_t8g26")]
material = null
layout_mode = 2
mouse_filter = 1
theme = ExtResource("15_lgahd")
icon = ExtResource("16_4850j")
minimum_size = Vector2(20, 20)
expand_icon = true
icon_use_parent_material = true
action_mode = 1

[node name="Tooltip" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Buttons/Delete" instance=ExtResource("6_okb6t")]
tooltip = "Delete"

[node name="Upload" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Buttons" instance=ExtResource("16_lpql2")]
material = SubResource("ShaderMaterial_v5nci")
layout_mode = 2
theme = ExtResource("18_xjmef")
mode = 1
minimum_size = Vector2(19, 20)
expand_icon = true
flip_icon_v = false

[node name="Tooltip" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Buttons/Upload" instance=ExtResource("6_okb6t")]
position = Vector2(20, 2)
tooltip = "Upload"

[node name="More" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_t8g26")]
material = null
layout_mode = 2
mouse_filter = 1
theme = ExtResource("18_xjmef")
icon = ExtResource("9_qiab5")
minimum_size = Vector2(17, 16)
toggle_mode = true
icon_use_parent_material = true

[node name="Tooltip" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/More" instance=ExtResource("6_okb6t")]
tooltip = "More"

[node name="MoreContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/MoreContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 3

[node name="Text" parent="HBoxContainer/PanelContainer/VBoxContainer/MoreContainer/GridContainer" instance=ExtResource("4_4rv63")]
material = SubResource("ShaderMaterial_kjmis")
layout_mode = 2
icon_colour = Color(0, 0, 0, 1)
text = "Text"
minimum_size = Vector2(49, 20)

[node name="GridShadow" parent="HBoxContainer/PanelContainer/VBoxContainer/MoreContainer/GridContainer" instance=ExtResource("4_4rv63")]
material = SubResource("ShaderMaterial_nu25j")
layout_mode = 2
text = "Grid Shadow"
minimum_size = Vector2(49, 20)

[node name="Active" parent="HBoxContainer/PanelContainer/VBoxContainer/MoreContainer/GridContainer" instance=ExtResource("4_4rv63")]
material = SubResource("ShaderMaterial_uo624")
layout_mode = 2
text = "Active"
minimum_size = Vector2(50, 20)

[node name="Shadow1" parent="HBoxContainer/PanelContainer/VBoxContainer/MoreContainer/GridContainer" instance=ExtResource("4_4rv63")]
material = SubResource("ShaderMaterial_mgvhw")
layout_mode = 2
text = "Shadow 1"
minimum_size = Vector2(20, 20)

[node name="Shadow2" parent="HBoxContainer/PanelContainer/VBoxContainer/MoreContainer/GridContainer" instance=ExtResource("4_4rv63")]
material = SubResource("ShaderMaterial_b7217")
layout_mode = 2
text = "Shadow 2"
minimum_size = Vector2(20, 20)

[node name="Disabled" parent="HBoxContainer/PanelContainer/VBoxContainer/MoreContainer/GridContainer" instance=ExtResource("4_4rv63")]
material = SubResource("ShaderMaterial_xjsm0")
layout_mode = 2
text = "Disabled"
minimum_size = Vector2(20, 20)

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/MoreContainer"]
use_parent_material = true
layout_mode = 2
alignment = 1

[node name="Reset" parent="HBoxContainer/PanelContainer/VBoxContainer/MoreContainer/HBoxContainer" instance=ExtResource("4_t8g26")]
material = SubResource("ShaderMaterial_31qwt")
layout_mode = 2
icon = ExtResource("12_kpgqi")
minimum_size = Vector2(39, 21)
icon_use_parent_material = true

[node name="Randomise" parent="HBoxContainer/PanelContainer/VBoxContainer/MoreContainer/HBoxContainer" instance=ExtResource("4_t8g26")]
material = SubResource("ShaderMaterial_tyhon")
layout_mode = 2
icon = ExtResource("13_u5xtd")
minimum_size = Vector2(39, 21)
icon_use_parent_material = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited" flags=18]
[connection signal="text_changed" from="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Title" to="." method="_on_title_text_changed" flags=18]
[connection signal="toggled" from="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Use" to="." method="_on_use_toggled"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Buttons/Delete" to="." method="_on_delete_pressed"]
[connection signal="toggled" from="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/More" to="." method="_on_more_toggled"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/MoreContainer/HBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/MoreContainer/HBoxContainer/Randomise" to="." method="_on_randomise_pressed"]
